fixed visual from slider where the photo was not covering the full width of the project

--- a/online-store-client/src/components/Slider/Slider.scss
+++ b/online-store-client/src/components/Slider/Slider.scss
@@ -1,6 +1,6 @@
 .slider{
     height: calc(100vh - 80px);
-    width: 100vh;
+    width: 100%;
     position: relative;
     overflow: hidden;
 
